2005-09-27  Sven Panne  <sven.panne@aedion.de>

	* include/AL/alut.h, src/alutError.c, src/alutInit.c,
	src/alutInternal.h, src/alutLoader.c, src/alutWaveform.c: Adapted
	to spec changes. Added a few missing error checks. Improved
	SampleAttribs a bit.

	* doc/alut.css, doc/alut.html: Make descriptions of API entries
	more formal, following the usual manual page style (not finished
	yet). Added some clarifications. Changed the set of possible ALUT
	errors.

2005-09-26  Sven Panne  <sven.panne@aedion.de>

	* doc/alut.html, include/AL/alut.h, src/alutError.c,
	src/alutInit.c, src/alutInternal.h, src/alutLoader.c,
	src/alutUtil.c: Clarified and changed the ALUT error handling and
	reporting after the corresponding discussion on the mailing list.

2005-09-23  Sven Panne  <sven.panne@aedion.de>

	* admin/.cvsignore: Ignore mkinstalldirs.

	* src/alutLoader.c: Make the endianess test dynamic.

2005-09-21  Sven Panne  <sven.panne@aedion.de>

	* src/alutLoader.c: Removed evil byte-swapping. Fixed WAV loading
	(still not 100% bullet-proof, I think). Cleanup.

	* admin/.indent.pro: Added new typedef.

	* src/alutInternal.h: Handle 32bit sized types on Windows.

2005-09-18  Sven Panne  <sven.panne@aedion.de>

	* src/alutInit.c, src/alutLoader.c: Added a few error checks. Made
	testing for errors more consistent, it should be of the form:

	   if (!<assertion>)
	     {
	       _alutSetError(<error>);
	       <cleanup>
	       return <whatever>;
	     }

	* admin/.indent.pro, examples/.cvsignore, examples/Makefile.am,
	src/alutLoader.c: Merged and heavily modified Erik Hofman's fixes
	for AU/WAV loaders. Some more cleanup + minor fixes.

	* examples/playfile.c: Added.

2005-09-17  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, include/AL/alut.h, test_suite/Makefile.am: Flag
	deprecated functions if possible (VisualC++ .NET and GCC >=
	3.1.1), but be careful to avoid those warnings in our test suite.

	* admin/m4/alut_check_flag.m4, admin/m4/alut_eval_stderr.m4:
	Added.
