@@ -1,3 +1,12 @@
+2005-09-28  Sven Panne  <sven.panne@aedion.de>
+
+	* examples/playfile.c, include/AL/alut.h, src/alutError.c,
+	src/alutInit.c, src/alutLoader.c: Adapted to spec changes.
+
+	* doc/alut.html: Updated list of error tokens. Replaced
+	alutEnumerateSupportedFileTypes with alutGetMIMETypes. More
+	reformatting and clarifications.
+
 2005-09-27  Sven Panne  <sven.panne@aedion.de>
 
 	* include/AL/alut.h, src/alutError.c, src/alutInit.c,
